--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "connect-history-api-fallback": "^1.2.0",
     "cross-env": "^2.0.0",
     "css-loader": "^0.23.1",
+    "dataloader": "^1.2.0",
     "express": "^4.14.0",
     "express-graphql": "^0.5.3",
     "file-loader": "^0.9.0",
@@ -69,6 +70,8 @@
     "html-webpack-plugin": "^2.22.0",
     "lodash": "^4.13.1",
     "normalize.css": "^4.2.0",
+    "passport": "^0.3.2",
+    "passport-google-oauth": "^1.0.0",
     "postcss-loader": "^0.9.1",
     "precss": "^1.4.0",
     "react": "^15.2.1",
