--- a/package.json
+++ b/package.json
@@ -57,23 +57,30 @@
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
     "babel-relay-plugin": "^0.9.2",
+    "body-parser": "^1.15.2",
     "chalk": "^1.1.3",
     "connect-history-api-fallback": "^1.2.0",
+    "cookie-parser": "^1.4.3",
+    "cookie-session": "^2.0.0-alpha.1",
     "cross-env": "^2.0.0",
     "css-loader": "^0.23.1",
     "dataloader": "^1.2.0",
     "express": "^4.14.0",
     "express-graphql": "^0.5.3",
+    "express-session": "^1.14.0",
     "file-loader": "^0.9.0",
     "graphql": "^0.6.1",
     "graphql-relay": "^0.4.2",
     "html-webpack-plugin": "^2.22.0",
     "lodash": "^4.13.1",
+    "mysql": "^2.11.1",
     "normalize.css": "^4.2.0",
     "passport": "^0.3.2",
     "passport-google-oauth": "^1.0.0",
     "postcss-loader": "^0.9.1",
     "precss": "^1.4.0",
+    "proxy": "^0.2.4",
+    "proxy-middleware": "^0.15.0",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
     "react-mdl": "^1.6.1",
@@ -81,6 +88,7 @@
     "react-router": "^2.5.2",
     "react-router-relay": "^0.13.3",
     "style-loader": "^0.13.1",
+    "url": "^0.11.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
