--- a/package.json
+++ b/package.json
@@ -77,6 +77,8 @@
     "normalize.css": "^4.2.0",
     "passport": "^0.3.2",
     "passport-google-oauth": "^1.0.0",
+    "pg": "^6.0.3",
+    "pg-hstore": "^2.3.2",
     "postcss-loader": "^0.9.1",
     "precss": "^1.4.0",
     "proxy": "^0.2.4",
@@ -87,6 +89,7 @@
     "react-relay": "^0.9.2",
     "react-router": "^2.5.2",
     "react-router-relay": "^0.13.3",
+    "sequelize": "^3.23.6",
     "style-loader": "^0.13.1",
     "url": "^0.11.0",
     "url-loader": "^0.5.7",
